--- a/public/css/SobrePageStyle/sobre.css
+++ b/public/css/SobrePageStyle/sobre.css
@@ -1,10 +1,11 @@
 body {
     padding: 0;
     margin: 0;
+   
+}
 
-    
-
-    & .div-main {
+@media screen and (min-width: 1025px){
+    .div-main {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -143,7 +144,7 @@ body {
                         color: white;
                     }
                 }
-            }  
+            }   
         }
 
 
@@ -214,4 +215,437 @@ body {
         }
     }
 }
+
+
+@media screen and (min-width: 551px) and (max-width: 1024px) {
+    .div-main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 50px;
+
+        /*Estilo do Titulo Light*/
+        & .title-sobre-light {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 25px;
+            border: 1px solid rgb(202, 202, 202);
+            width: calc(100% - 80px);
+            text-align: center;
+            margin: 0 40px 20px 40px;
+            padding: 8px 0;
+            border-radius: 4px;
+        }
+
+        & .div-figure-old-barber-light {
+            background: rgb(211, 227, 247);
+            width: calc(100% - 80px);
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            margin: 0 40px 20px 40px;
+            border-radius: 4px;
+
+            & .div-img-old-barber-1 {
+                width: 550px;
+                height: 450px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+
+                & figure {
+                    margin: 0;
+
+                    & img {
+                        /*border-radius: 20px 20px 0 0;*/
+                        box-shadow: 2px 2px 10px black;
+                        width: 100%;
+                        height: calc(100% - 20px);
+                    }
+    
+                    & figcaption {
+                        border: 1px solid rgb(133, 133, 133);
+                        text-align: center;
+                        font-family: Arial, Helvetica, sans-serif;
+                        font-weight: 600;
+                        padding: 5px 0;
+                        box-shadow: 2px 2px 10px black;
+                    }
+                }
+            }  
+        }
+
+        & .text-history-barber {
+            width: calc(100% - 80px);
+            margin: 0 40px;
+            text-align: justify;
+            font-family: Arial, Helvetica, sans-serif;
+
+            & .text-history-barber-sub {
+                width: calc(100% - 30px);
+                margin-top: 40px;
+                background: #e9e9e9;
+                border-radius: 4px;
+                padding: 10px 20px 0px 10px;
+                display: flex;
+                flex-direction: column;
+                font-family: Arial, Helvetica, sans-serif;
+
+                & .div-img-old-barber-2 {
+                    width: 400px;
+
+                    & img {
+                        width: 100%;
+                        border-radius: 4px;
+                    }
+                }
+
+                & .continuation-text {
+                    width: calc(100% - 420px);
+                    margin-left: 20px;
+                }
+            }
+        }
+        /*Estilo do Titulo Dark*/
+        & .title-sobre-dark {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 25px;
+            border: 1px solid rgb(202, 202, 202);
+            width: calc(100% - 80px);
+            text-align: center;
+            margin: 0 40px 20px 40px;
+            padding: 8px 0;
+            border-radius: 4px;
+            color: white;
+            text-shadow: 1px 1px 10px #fff;
+        }
+
+        & .div-figure-old-barber-dark {
+            background: #525252;
+            width: calc(100% - 80px);
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            margin: 0 40px 20px 40px;
+            border-radius: 4px;
+
+            & .div-img-old-barber-1 {
+                width: 550px;
+                height: 450px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+
+                & figure {
+                    margin: 0;
+
+                    & img {
+                        /*border-radius: 20px 20px 0 0;*/
+                        box-shadow: 2px 2px 10px rgb(185, 185, 185);
+                        width: 100%;
+                        height: calc(100% - 20px);
+                    }
+    
+                    & figcaption {
+                        border: 1px solid rgb(133, 133, 133);
+                        text-align: center;
+                        font-family: Arial, Helvetica, sans-serif;
+                        font-weight: 600;
+                        padding: 5px 0;
+                        box-shadow: 2px 2px 10px rgb(185, 185, 185);
+                        color: white;
+                    }
+                }
+            }   
+        }
+
+
+        /*Estilo Light Text-History*/
+        & .text-history-barber-light {
+            width: calc(100% - 80px);
+            margin: 0 40px;
+            text-align: justify;
+            font-family: Arial, Helvetica, sans-serif;
+
+            & .text-history-barber-sub {
+                width: calc(100% - 30px);
+                margin-top: 40px;
+                background: rgb(211, 227, 247);
+                border-radius: 4px;
+                padding: 10px 20px 0px 10px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: Arial, Helvetica, sans-serif;
+
+                & .div-img-old-barber-2 {
+                    width: 400px;
+
+                    & img {
+                        width: 100%;
+                        border-radius: 4px;
+                    }
+                }
+
+                & .continuation-text {
+                    width: calc(100% - 40px);
+                    margin: 0 20px;
+                }
+            }
+        }
+        /*Estilo Dark Text-History*/
+        & .text-history-barber-dark {
+            width: calc(100% - 80px);
+            margin: 0 40px;
+            text-align: justify;
+            font-family: Arial, Helvetica, sans-serif;
+            color: #d8d8d8;
+
+            & .text-history-barber-sub {
+                width: calc(100% - 30px);
+                margin-top: 40px;
+                background: #525252;
+                border-radius: 4px;
+                padding: 10px 20px 0px 10px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: Arial, Helvetica, sans-serif;
+
+                & .div-img-old-barber-2 {
+                    width: 400px;
+
+                    & img {
+                        width: 100%;
+                        border-radius: 4px;
+                    }
+                }
+
+                & .continuation-text {
+                    width: calc(100% - 40px);
+                    margin: 0 20px;
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width: 550px) {
+    .div-main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 50px;
+
+        /*Estilo do Titulo Light*/
+        & .title-sobre-light {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 20px;
+            border: 1px solid rgb(202, 202, 202);
+            width: calc(100% - 40px);
+            text-align: center;
+            margin: 0 20px 20px 20px;
+            padding: 8px 0;
+            border-radius: 4px;
+        }
+
+        & .div-figure-old-barber-light {
+            background: rgb(211, 227, 247);
+            width: calc(100% - 40px);
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            margin: 0 20px 20px 20px;
+            border-radius: 4px;
+
+            & .div-img-old-barber-1 {
+                width: 550px;
+                height: 400px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+
+                & figure {
+                    margin: 0;
+
+                    & img {
+                        /*border-radius: 20px 20px 0 0;*/
+                        box-shadow: 2px 2px 10px black;
+                        width: 100%;
+                        height: calc(100% - 20px);
+                    }
+    
+                    & figcaption {
+                        border: 1px solid rgb(133, 133, 133);
+                        text-align: center;
+                        font-family: Arial, Helvetica, sans-serif;
+                        font-weight: 600;
+                        padding: 5px 0;
+                        box-shadow: 2px 2px 10px black;
+                    }
+                }
+            }  
+        }
+
+        & .text-history-barber {
+            width: calc(100% - 40px);
+            margin: 0 20px;
+            text-align: justify;
+            font-family: Arial, Helvetica, sans-serif;
+
+            & .text-history-barber-sub {
+                width: calc(100% - 0px);
+                margin-top: 40px;
+                background: #e9e9e9;
+                border-radius: 4px;
+                /*padding: 0px 0px 0px 0px;*/
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: Arial, Helvetica, sans-serif;
+
+                & .div-img-old-barber-2 {
+                    width: 100%;
+
+                    & img {
+                        width: 100%;
+                        border-radius: 4px;
+                    }
+                }
+
+                & .continuation-text {
+                    width: calc(100% - 40px);
+                    margin: 0 20px;
+                }
+            }
+        }
+        /*Estilo do Titulo Dark*/
+        & .title-sobre-dark {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 20px;
+            border: 1px solid rgb(202, 202, 202);
+            width: calc(100% - 40px);
+            text-align: center;
+            margin: 0 20px 20px 20px;
+            padding: 8px 0;
+            border-radius: 4px;
+            color: white;
+            text-shadow: 1px 1px 10px #fff;
+        }
+
+        & .div-figure-old-barber-dark {
+            background: #525252;
+            width: calc(100% - 40px);
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            margin: 0 20px 20px 20px;
+            border-radius: 4px;
+
+            & .div-img-old-barber-1 {
+                width: 550px;
+                height: 400px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+
+                & figure {
+                    margin: 0;
+
+                    & img {
+                        /*border-radius: 20px 20px 0 0;*/
+                        box-shadow: 2px 2px 10px rgb(185, 185, 185);
+                        width: 100%;
+                        height: calc(100% - 20px);
+                    }
+    
+                    & figcaption {
+                        border: 1px solid rgb(133, 133, 133);
+                        text-align: center;
+                        font-family: Arial, Helvetica, sans-serif;
+                        font-weight: 600;
+                        padding: 5px 0;
+                        box-shadow: 2px 2px 10px rgb(185, 185, 185);
+                        color: white;
+                    }
+                }
+            }   
+        }
+
+
+        /*Estilo Light Text-History*/
+        & .text-history-barber-light {
+            width: calc(100% - 40px);
+            margin: 0 20px;
+            text-align: justify;
+            font-family: Arial, Helvetica, sans-serif;
+
+            & .text-history-barber-sub {
+                width: calc(100% - 20px);
+                margin-top: 40px;
+                background: rgb(211, 227, 247);
+                border-radius: 4px;
+                padding: 10px 10px 0px 10px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: Arial, Helvetica, sans-serif;
+
+                & .div-img-old-barber-2 {
+                    width: 100%;
+
+                    & img {
+                        width: 100%;
+                        border-radius: 4px;
+                    }
+                }
+
+                & .continuation-text {
+                    width: calc(100% - 20px);
+                    margin: 0 10px;
+                }
+            }
+        }
+        /*Estilo Dark Text-History*/
+        & .text-history-barber-dark {
+            width: calc(100% - 40px);
+            margin: 0 20px;
+            text-align: justify;
+            font-family: Arial, Helvetica, sans-serif;
+            color: #d8d8d8;
+
+            & .text-history-barber-sub {
+                width: calc(100% - 20px);
+                margin-top: 40px;
+                background: #525252;
+                border-radius: 4px;
+                padding: 10px 10px 0px 10px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: Arial, Helvetica, sans-serif;
+
+                & .div-img-old-barber-2 {
+                    width: 100%;
+
+                    & img {
+                        width: 100%;
+                        border-radius: 4px;
+                    }
+                }
+
+                & .continuation-text {
+                    width: calc(100% - 20px);
+                    margin: 0 10px;
+                }
+            }
+        }
+    }
+}
+    
+
 
