Finalizando o layout dark

--- a/App/Views/CortesPage/cortes.html
+++ b/App/Views/CortesPage/cortes.html
@@ -1,6 +1,6 @@
 <main>
     <div class="container-cortes">
-        <div class="container-title-cortes">
+        <div id="title-cortes" class="container-title-cortes-light">
             <h1>Nossos trabalhos</h1>
         </div>
         <div class="carousel-principal">
@@ -127,7 +127,7 @@
         </div>
         <div class="stripe-division"></div>
         <div class="text-personalizados">
-            <div class="text">
+            <div id="text-cortes" class="text-light">
                 <h4>Barbearia com estilo único: Cortes Personalizados.</h4>
                 <ul id="list-cortes">
                     <li><span>Cortes Clássicos: </span>Perfeito para quem aprecia um estilo atemporal e elegante. 
@@ -166,12 +166,12 @@
                 </ul>
             </div>           
         </div>
-        <div class="container-subtitle">
+        <div id="subtitle-cortes" class="container-subtitle-light">
             <h5>Cortes personalizados</h5>
         </div>
         <div class="carousel-secundary">
             <div class="slider">
-                <div class="slides">
+                <div class="slides"> 
                     <input type="radio" id="radio2-1" name="radio-buttons-2" value="inp1" checked>
                     <input type="radio" id="radio2-2" name="radio-buttons-2" value="inp2">
                     <input type="radio" id="radio2-3" name="radio-buttons-2" value="inp3">
