--- a/App/Views/RegisterPage/register.html
+++ b/App/Views/RegisterPage/register.html
@@ -15,6 +15,10 @@
         </div>
         <div class="container-form-register">
             <div class="form-register">
+                <div class="message-hidden">
+                    <img src="public/img/verify.png" alt="Ok">
+                    <p id="message">Cadastro realizado com sucesso.</p>
+                </div>
                 <form action="">
                     <div class="container-nome-dt-nascimento">
                         <div class="container-nome">
