Finally base FrontEnd

--- a/App/Views/CortesPage/cortes.html
+++ b/App/Views/CortesPage/cortes.html
@@ -114,13 +114,13 @@
             </div>
             <button id="btn-prev"
                     onclick="slider(-1)">
-                <img src="public/img/seta-direita.png" 
+                <img id="icon_btn_prev_imgs" src="public/img/seta-direita.png" 
                      alt="Anterior"
                      title="Anterior">
             </button>
             <button id="btn-next"
                     onclick="slider(1)">
-                <img src="public/img/seta-direita.png" 
+                <img id="icon_btn_next_imgs" src="public/img/seta-direita.png" 
                      alt="Next" 
                      title="Próximo">
             </button>
@@ -262,18 +262,18 @@
             </div>
             <button id="btn-prev2"
                     onclick="slider2(-1)">
-                <img src="public/img/seta-direita.png" 
+                <img id="icon_btn_prev_imgs2" src="public/img/seta-direita.png" 
                      alt="Anterior"
                      title="Anterior">
             </button>
             <button id="btn-next2"
                     onclick="slider2(1)">
-                <img src="public/img/seta-direita.png" 
+                <img id="icon_btn_next_imgs2" src="public/img/seta-direita.png" 
                      alt="Next" 
                      title="Próximo">
             </button>
         </div>
-        <div class="consideracoes">
+        <div id="consideracoes" class="consideracoes-light">
             <p><span>Agende seu horário na Barbearia Estilo Único e descubra o que significa ter um corte realmente 
                 personalizado!</span>
             </p>
