--- a/App/Views/HomePage/home.html
+++ b/App/Views/HomePage/home.html
@@ -194,7 +194,8 @@
                         </button>
                     </div>     
                 </div>
-                <div class="div-message-disponibilidade">
+                <div id="container-message-agendar" 
+                     class="div-message-disponibilidade-hidden">
                     <img id="icon-verify" src="public/img/verify.png" 
                                             alt="Verificado"/>
                     <p id="message-disponibilidade-success">
