--- a/public/css/RegisterPageStyle/register.css
+++ b/public/css/RegisterPageStyle/register.css
@@ -62,6 +62,28 @@
                 padding: 50px;
                 border-radius: 20px;
                 box-shadow: 2px 2px 10px rgb(0, 10, 44);
+                
+                & .message-hidden {
+                    display: none;
+                }
+                & .message-register {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    background-color: rgb(219, 255, 216);
+                    border-radius: 10px;
+                    padding: 5px 0 5px 10px;
+
+                    & img {
+                        width: 25px;
+                    }
+                    
+                    & #message {
+                        color: rgb(6, 121, 6);
+                        margin: 0;
+                        margin-left: 10px;
+                    }
+                }    
 
                 & input {
                     height: 30px;
@@ -326,6 +348,28 @@
                 padding: 50px;
                 border-radius: 20px;
                 box-shadow: 2px 2px 10px rgb(0, 10, 44);
+
+                & .message-hidden {
+                    display: none;
+                }
+                & .message-register {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    background-color: rgb(219, 255, 216);
+                    border-radius: 10px;
+                    padding: 5px 0 5px 10px;
+
+                    & img {
+                        width: 25px;
+                    }
+                    
+                    & #message {
+                        color: rgb(6, 121, 6);
+                        margin: 0;
+                        margin-left: 10px;
+                    }
+                }    
 
                 & input {
                     height: 30px;
